--- a/icmake/doc/icmbuild.1
+++ b/icmake/doc/icmbuild.1
@@ -1,4 +1,4 @@
-.TH "icmbuild" "1" "1992\-2016" "icmake\&.9\&.00\&.00\&.tar\&.gz" "A generic program maintenance script"
+.TH "icmbuild" "1" "1992\-2016" "icmake\&.9\&.01\&.00\&.tar\&.gz" "A generic program maintenance script"
 
 .PP 
 .SH "NAME"
@@ -161,50 +161,8 @@ files must be recompiled\&. Furthermore, if a \fI`USE_ALL\(cq\&\fP file exists i
 directory then all sources of classes depending on that directory\(cq\&s class are
 also recompiled\&. 
 .PP 
-\fIIcm\-dep\fP recognizes various options:
-.IP o 
-By default, it inspects dependencies of the classes mentioned in the
-\fICLASSES\fP file (including \fIparser\fP and \fIscanner\fP classes, if used)\&. 
-Option \fI\-\-classes filename\fP (or \fI\-c filename\fP) can be provided to specify
-an alternate file\&.
-.IP o 
-By default the contents of an \fIicmconf\fP file is inspected, looking
-for \fIUSE_ALL\fP and \fIPRECOMP\fP specifications\&. The option \fI\-\-icmconf file\fP
-(or \fI\-i file\fP) option can be provided to specify an alternate file\&.
-.IP o 
-The \fIicmconf\fP file uses the \fI#define IH\fP parameter to specify the
-suffix of class header files that should be precompiled, their filenames being
-equal to the names of the classes mentioned in the \fICLASSES\fP
-file\&. \fICLASSES\fP does not specify a top\-level directory\&. The name of the
-top\-level header file to precompile can be specified using the option
-\fI\-\-mainih filename\fP (or \fI\-m filename\fP) specification\&. By default this is
-\fImain\&.ih\fP\&. 
-.IP o 
-By default precompiled header files are inspected if \fIicmconf\fP
-contains a \fI#define PRECOMP\fP specification\&. If it does not, but precompiled
-headers should nonetheless be inspected, the option \fI\-\-gch\fP can be
-specified\&. Conversely, if precompiled headers should \fInot\fP be inspected, the
-option \fI\-\-no\-gch\fP can be specified\&.
-.IP o 
-By default files named at the \fI#define USE_ALL\fP specification are
-inspected if \fIicmconf\fP contains such a specification\&. If it
-does not, but \fI`USE_ALL\(cq\&\fP files  should nonetheless be inspected, the option
-\fI\-\-use\-all file\fP can be specified\&. Conversely, if such files should \fInot\fP
-be inspected, the option \fI\-\-no\-use\-all\fP can be specified\&.
-.IP o 
-Options \fI\-\-verbose\fP (or \fI\-V\fP) can be specified to increase
-\fIicm_dep\(cq\&s\fP verbosity\&. If none is specified, \fIicm_dep\fP silently performs
-its duties\&. If specified once, then \fIicm_dep\fP reports to the standard output
-what actions it performs; if specified twice it reports the options it
-encountered; if specified three times it also reports the class
-dependencies; if specified more often it reports what files it encountered and
-what situations caused it to make its decisions\&.
-.IP o 
-Option \fI\-\-version\fP (or \fI\-v\fP) ends \fIicm_dep\fP after reporting its
-version number to the standard output\&.
-.IP o 
-Option \fI\-\-help\fP (or \fI\-h\fP) ends \fIicm_dep\fP after writing a
-summary of its usage to the standard output\&.
+\fIIcm\-dep\(cq\&s\fP options are described in \fBicmake\fP(1)\(cq\&s man\-page\&.
+.PP 
 To start its work, \fIicm_dep\fP needs one command\-line argument:
 \fIgo\fP\&. Any other argument results in \fIicm_dep\fP performing a `dry run\(cq\&: it
 will perform all its duties (and verbose messages are displayed as if \fIgo\fP
@@ -343,7 +301,7 @@ program, using the library \fIlibbobcat1\fP as an additional library:
 #define ADD_LIBRARIES       \(dq\&\(dq\&
 
     // additional paths (other than the standard paths) to locate additional
-    // libraries:
+    // libraries (specify absolute paths or relative to TMP_DIR):
 #define ADD_LIBRARY_PATHS   \(dq\&\(dq\&
 
 
