cosmetic changes to icmake's --help output

--- a/icmake/changelog
+++ b/icmake/changelog
@@ -1,25 +1,31 @@
+icmake (9.01.01)
+
+  * Cosmetic changes to icmake --help's output
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 14 Sep 2016 13:10:56 +0200
+
 icmake (9.01.00)
 
-* Man-pages weren't properly updated at 9.00.00. This was fixed in this
-release. 
+  * Man-pages weren't properly updated at 9.00.00. This was fixed in this
+    release. 
 
  -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 03 Sep 2016 15:10:43 +0200
 
 icmake (9.00.00)
 
-* Added support program icm-dep computing dependencies for USE_ALL classes and
-  precompiled headers, called from /usr/bin/icmbuild, or directly using
-  icmake's option --icm-dep (-d)
+  * Added support program icm-dep computing dependencies for USE_ALL classes
+    and precompiled headers, called from /usr/bin/icmbuild, or directly using
+    icmake's option --icm-dep (-d)
 
- * Icmake supports several long options in addition to the standard short
-   options. See icmake(1) for details.
+  * Icmake supports several long options in addition to the standard short
+    options. See icmake(1) for details.
 
-* Changed references to IS_* into O_* in icmake(1)'s man-page. The IS_ entries
-  were already unavailable, but the man-page still referred to them. Now
-  fixed. 
+  * Changed references to IS_* into O_* in icmake(1)'s man-page. The IS_
+    entries were already unavailable, but the man-page still referred to
+    them. Now fixed.
 
- * Contents of lines in CLASSES beyond the first word are no longer
-   interpreted.
+  * Contents of lines in CLASSES beyond the first word are no longer
+    interpreted.
 
  * Added new option NO_PRECOMP_WARNING to icmconf
 
